EADeployment/CA2/argo-apps/demo-app/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: demo.4eec9e20b63c410b88ee.northeurope.aksapp.io
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
     # - backend:
     #     service:
     #       name: frontend-canary
     #       port:
     #       number: 3000
     #   path: /canary
     #   pathType: prefix
  tls:
  - hosts:
    - demo.4eec9e20b63c410b88ee.northeurope.aksapp.io
    secretName: demo-cert
